Fix Micronaut layered native image build